# explainable-brains-hackathon

./: .gitignore  CLAUDE.md  ONBOARDING.md  README.md  TEAM_PLAN.md  embedding_calculation.py  environment.yml  pyproject.toml  requirements.txt
bucket_access/: bucket_utils.py  config  config.py
frontend/: HiFi.html  Patch-Selection-Workbench.html  Wireframes.html  hifi-app.jsx  hifi-core.jsx  hifi-shell.jsx  hifi-tabs.jsx  wireframes.jsx
frontend/data/: focused.json  scatter.json  selection.json
jesko/: app.py  data.py  segmentation.py  selection.py
natural_language/: README.md  _smoke_test.py  api.py  prompts.py  score.py  search.py  server.py
natural_language/docs/: 00-overview.md  01-data-pipeline.md  02-prompts.md  03-scoring.md  04-search.md  05-risks.md  CONTEXT.md  README.md  task-A-plip-bootstrap.md  task-B-prompts.md  task-C-scoring.md  task-D-search.md  task-E-api-handoff.md
tools/: build_frontend_data.py
